@@ -1,3 +1,7 @@
+2022-04-25  Karl Berry  <karl@freefriends.org>
+
+	* texmfmp.c (find_input_file): doc fix.
+
 2022-03-21  Karl Berry  <karl@tug.org>
 
 	* TL'22 release.
